--- a/SpaceX_Storyboard_UIKit/Info.plist
+++ b/SpaceX_Storyboard_UIKit/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>GoogleMapsAPI_KEY</key>
+	<string>AIzaSyCVz8OFWmnrHmkeX5HT77LRmNhBODh0oV8</string>
 </dict>
 </plist>
