--- a/SpaceX_Storyboard_UIKit/Info.plist
+++ b/SpaceX_Storyboard_UIKit/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>GoogleMapsAPI_KEY</key>
+	<string>AIzaSyCVz8OFWmnrHmkeX5HT77LRmNhBODh0oV8</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -21,7 +23,10 @@
 			</array>
 		</dict>
 	</dict>
-	<key>GoogleMapsAPI_KEY</key>
-	<string>AIzaSyCVz8OFWmnrHmkeX5HT77LRmNhBODh0oV8</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
